<?xml version="1.0"?>
<package format="2">
  <name>team705</name>
  <version>0.0.0</version>
  <description>Team705-notTrashCar solution package for FPT Driverless Car Challenge 2019</description>
  <maintainer email="lamhoangtung.vz@gmail.com">lamhoangtung</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
